--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 PORT = 8000 
+MONGO_URL = mongodb+srv://ashutoshsidhya69:<password>@cluster0.mihmdyw.mongodb.net/database?retryWrites=true&w=majority
