--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT = 8000 
-MONGO_URL = mongodb+srv://ashutoshsidhya69:<password>@cluster0.mihmdyw.mongodb.net/database?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://ashutoshsidhya69:AanyKQ0n8DOGSKn0@cluster0.bmanxba.mongodb.net/user?retryWrites=true&w=majority
